--- a/all.bib
+++ b/all.bib
@@ -126,10 +126,10 @@
 
 @misc{Z3,
 	key = {Z3},
-	title={{High-performance Theorem Prover}},
-	url = {http://z3.codeplex.com/},
-	note = {Accessed: 2014-11-4 13:21:00},
-	year = {2014}
+	title={The Z3 Theorem Prover},
+	url = {{https://github.com/Z3Prover/z3}},
+	note = {Accessed: 2022-03-20 13:21:00},
+	year = {2022}
 
 }
 
@@ -2774,4 +2774,73 @@ publisher="Springer Berlin Heidelberg",
 address="Berlin, Heidelberg",
 pages="116--130",
 isbn="978-3-642-22438-6"
+}
+
+@article{WF92,
+author = {Wright, A.K. and Felleisen, M.},
+title = {A Syntactic Approach to Type Soundness},
+year = {1994},
+issue_date = {Nov. 15, 1994},
+publisher = {Academic Press, Inc.},
+address = {USA},
+volume = {115},
+number = {1},
+issn = {0890-5401},
+url = {https://doi.org/10.1006/inco.1994.1093},
+doi = {10.1006/inco.1994.1093},
+journal = {Inf. Comput.},
+month = {nov},
+pages = {38–94},
+numpages = {57}
+}
+
+@inproceedings{Honda96,
+author = {Honda, Kohei},
+title = {Composing Processes},
+year = {1996},
+isbn = {0897917693},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/237721.237802},
+doi = {10.1145/237721.237802},
+booktitle = {Proceedings of the 23rd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+pages = {344–357},
+numpages = {14},
+location = {St. Petersburg Beach, Florida, USA},
+series = {POPL '96}
+}
+
+@misc{tycon,
+	key = {Tycon Blog},
+	title={{Vagaries of Git Merge}},
+	url = {http://tycon.github.io/git-inconsistencies.html},
+  note = {Accessed: 2022-03-03 12:21:00},
+  year = {2019}
+}
+
+@misc{russell,
+	key = {Russell O'Connor's Blog},
+	title={{Git is Inconsistent}},
+	url = {http://r6.ca/blog/20110416T204742Z.html},
+  note = {Accessed: 2022-03-19 12:21:00},
+  year = {2011}
+}
+
+@article{HNMSession16,
+author = {Honda, Kohei and Yoshida, Nobuko and Carbone, Marco},
+title = {Multiparty Asynchronous Session Types},
+year = {2016},
+issue_date = {March 2016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {63},
+number = {1},
+issn = {0004-5411},
+url = {https://doi.org/10.1145/2827695},
+doi = {10.1145/2827695},
+journal = {J. ACM},
+month = {mar},
+articleno = {9},
+numpages = {67},
+keywords = {Session types, the pi-calculus, projection, progress, global types, global protocols}
 }
