--- a/quark.tex
+++ b/quark.tex
@@ -1,4 +1,5 @@
 %% For double-blind review submission, w/o CCS and ACM Reference (max submission space)
+%\documentclass[sigplan,review]{acmart}
 \documentclass[sigplan,screen]{acmart}
 %\settopmatter{printfolios=true,printccs=false,printacmref=false}
 %% For final camera-ready submission, w/ required CCS and ACM Reference
@@ -35,27 +36,18 @@
 
 %% Journal information
 %% Supplied to authors by publisher for camera-ready submission;
-%% use defaults for review submission.
-%%\acmJournal{PACMPL}
-%%\acmVolume{1}
-%%\acmNumber{POPL} % CONF = POPL or ICFP or OOPSLA
-%%\acmArticle{1}
-%%\acmYear{2022}
-%%\acmMonth{1}
-%%\acmDOI{} % \acmDOI{10.1145/nnnnnnn.nnnnnnn}
-%%\startPage{1}
-\acmConference[PLDI]{ACM Conference}{June 2022}{San Diego, USA}%
-
 %% Copyright information
 %% Supplied to authors (based on authors' rights management selection;
 %% see authors.acm.org) by publisher for camera-ready submission;
 %% use 'none' for review submission.
-\setcopyright{none}
-%\setcopyright{acmcopyright}
-%\setcopyright{acmlicensed}
-%\setcopyright{rightsretained}
-%\copyrightyear{2018}           %% If different from \acmYear
-
+%%\setcopyright{none}
+\copyrightyear{2022} 
+\acmYear{2022} 
+\setcopyright{rightsretained} 
+\acmConference[PLDI '22]{Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation}{June 13--17, 2022}{San Diego, CA, USA}
+\acmBooktitle{Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation (PLDI '22), June 13--17, 2022, San Diego, CA, USA}
+\acmDOI{10.1145/3519939.3523724}
+\acmISBN{978-1-4503-9265-5/22/06}
 %% Bibliography style
 \bibliographystyle{ACM-Reference-Format}
 %% Citation style
@@ -155,13 +147,13 @@
   We propose a runtime-assisted approach to enforce convergence in
   distributed executions of replicated data types. The key
   distinguishing aspect of our approach is that it guarantees
-  convergence \emph{unconditionally} -- without requiring data
-  type operations to satisfy algebraic laws such as commutativity and
+  convergence \emph{unconditionally} -- without requiring data type
+  operations to satisfy algebraic laws such as commutativity and
   idempotence. Consequently, programmers are no longer obligated to
   prove convergence on a per-type basis. Moreover, our approach lets
   sequential data types be reused in a distributed setting by
-  extending their implementations rather than refactoring them.
-  The novel component of our approach is a distributed runtime that
+  extending their implementations rather than refactoring them.  The
+  novel component of our approach is a distributed runtime that
   orchestrates \emph{well-formed } executions that are guaranteed to
   converge. Despite the utilization of a runtime, our approach comes
   at no additional cost of latency and availability. Instead, we
@@ -169,7 +161,10 @@
   which roughly corresponds to the time taken for replicas to
   converge. We implement our approach in a system called \quark and
   conduct a thorough evaluation of its tradeoffs in the context of two
-  case studies.
+  case studies. 
+%%We also briefly discuss the utility of our approach in
+%%realizing causal coherency semantics in shared-memory concurrent
+%%systems,
 \end{abstract}
 
 
@@ -203,8 +198,8 @@
 
 %% Keywords
 %% comma separated list
-\keywords{Replication, MRDT, CRDT, Runtime, Convergence, Collaborative
-Editing}  %% \keywords are mandatory in final camera-ready submission
+\keywords{Replication, MRDT, CRDT, Runtime, Convergence, Concurrent
+Revisions, Causal Consistency, decentralized systems}  %% \keywords are mandatory in final camera-ready submission
 
 
 %% \maketitle
@@ -231,13 +226,13 @@ Editing}  %% \keywords are mandatory in final camera-ready submission
 \bibliography{all}
 
 %% Acknowledgments
-%\begin{acks}                            %% acks environment is optional
-                                        %% contents suppressed with 'anonymous'
-  %% Commands \grantsponsor{<sponsorID>}{<name>}{<url>} and
-  %% \grantnum[<url>]{<sponsorID>}{<number>} should be used to
-  %% acknowledge financial support and will be used by metadata
-  %% extraction tools.
-%\end{acks}
+\begin{acks}                            %% acks environment is optional
+  We thank the anonymous reviewers and our shepherd Doug Lea for their
+  thoughtful comments. First author has benefited from substantial
+  discussions with Anmol Sahoo and Suresh Jagannathan. Anmol has also
+  developed and maintained the OCaml-Scylla library, which is a key
+  piece of infrastructure underlying \quark.
+\end{acks}
 
 
 %% Bibliography
